fixed some tiny alignment issues
Set a template for moving foward

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,7 @@ main {
 }
 
 .carousel-container {
-  width: 80%; /* width of the entire carousel */
+  width: 80%; /* width of single image (on smaller */
   height: 75%;
   margin: 4rem auto 0 auto;
   position: relative;
@@ -30,13 +30,12 @@ main {
   width: 100%; /* give width that matches amount to display 33.74% on max */
   flex-shrink: 0;
   height: 100%;
-  /* padding-right: 15px; */
+  padding: 0 7.5px;
 }
 
 .post-container .post {
   width: 100%;
   height: 100%;
-  border: 1px solid #aaa; /* remove or change this */
   /* border-radius: 7.5px 0;  remove this add on larger screens */
   display: flex;
   flex-direction: column;
@@ -56,7 +55,7 @@ main {
   /* border-radius: 0 0 7.5px 0; remove this add on larger screens */
 }
 
-.post-info h2{
+.post-info h2 {
   font-size: 30px;
   margin: 0;
 }
@@ -87,11 +86,11 @@ main {
 }
 
 button.left {
-  left: -60px;
+  left: -37px;
 }
 
 button.right {
-  right: -60px;
+  right: -37px;
 }
 
 /* .carousel-items {
